SimpleComplex/Database 3.x, 2020-07-13
--------------------------------------
- DbQuery::setValidateParams() to alter validateParams option upon
  instantiation.
- MariaDb simple query fetch typed ints and floats.

SimpleComplex/Database 3.x, 2020-07-08
--------------------------------------
- Use simplecomplex/time's time classes instead of simplecomplex/utils' ditto.
- Release 3.0.

SimpleComplex/Database 2.x, 2019-11-10
--------------------------------------
- Release 2.0.

SimpleComplex/Database 2.x, 2019-11-09
--------------------------------------
- Result fetchers renamed: fetchField, fetchArrayAll, fetchObjectAll
  instead of fetchColumn, fetchAllArrays, fetchAllObjects;
  old methods preserved as deprecated and they do elicit deprecation error.
- New result fetcher fetchFieldAll, for fetching full column of a result
  set table.
- SCX Utils and Validate dependencies updated to current versions.

SimpleComplex/Database 1.x, 2019-11-09
--------------------------------------
- MsSql result fetchers implementing list-by-column shan't fail
  when column value is non-stringable object.

SimpleComplex/Database 1.x, 2019-09-23
--------------------------------------
- MS Sql unique key constraint error codes.
- Release 1.3.4.

SimpleComplex/Database 1.x, 2019-04-08
--------------------------------------
- Allow scx Utils major version 2.

SimpleComplex/Database 1.x, 2019-01-15
--------------------------------------
- Links to method implementations in interfaces' phpdocs,
  to ease navigation in source.

SimpleComplex/Database 1.x, 2019-01-06
--------------------------------------
- Release 1.3.2.

SimpleComplex/Database 1.x, 2019-01-04
--------------------------------------
- Don't use deprecated methods of the Time class, if new alternatives exist.
- phpunit's assert... methods are static, not instance methods.

SimpleComplex/Database 1.x, 2018-12-08
--------------------------------------
- MsSql result shan't err on empty result set (sic).
- Release 1.3.1.
