@@ -10,7 +10,6 @@ declare(strict_types=1);
 namespace SimpleComplex\Tests\Database\MsSql;
 
 use PHPUnit\Framework\TestCase;
-use SimpleComplex\Tests\Database\TestHelper;
 
 use SimpleComplex\Database\MsSqlClient;
 use SimpleComplex\Database\MsSqlQuery;
@@ -19,7 +18,7 @@ use SimpleComplex\Database\MsSqlResult;
 /**
  * @code
  * // CLI, in document root:
- * vendor/bin/phpunit vendor/simplecomplex/database/tests/src/MsSql/PopulateTest.php
+ * backend/vendor/bin/phpunit --do-not-cache-result backend/vendor/simplecomplex/database/tests/src/MsSql/PopulateTest.php
  * @endcode
  *
  * @package SimpleComplex\Tests\Database
@@ -29,10 +28,13 @@ class PopulateTest extends TestCase
     /**
      * Throw DbQueryException: can't truncate due to foreign key constraint.
      *
+     * @see ResetTest::testResetStructure()
      * @see ClientTest::testInstantiation
      */
     public function testInsert()
     {
+        (new ResetTest())->testResetStructure();
+
         /** @var MsSqlClient $client */
         $client = (new ClientTest())->testInstantiation();
 
@@ -44,13 +46,7 @@ class PopulateTest extends TestCase
                 'insert_id' => true,
             ]
         );
-
-        /** @noinspection SqlResolve */
-        /** @var MsSqlQuery $query_select */
-        $query_select = $client->query(
-            'SELECT * FROM parent WHERE id = ?'
-        );
-
+        //\SimpleComplex\Inspect\Inspect::getInstance()->variable($query_insert)->log();
         $args_insert = [
             'lastName' => 'Cognomen',
             'firstName' => 'Praenomena',
@@ -60,12 +56,15 @@ class PopulateTest extends TestCase
         /** @var MsSqlResult $result_insert */
         $result_insert = $query_insert->execute();
         static::assertInstanceOf(MsSqlResult::class, $result_insert);
-        TestHelper::logVariable('set type', $result_insert);
         static::assertSame(1, $result_insert->affectedRows());
         $insert_id = $result_insert->insertId('i');
-        TestHelper::logVariable('insert ID', $insert_id);
         static::assertIsInt($insert_id);
 
+        /** @noinspection SqlResolve */
+        /** @var MsSqlQuery $query_select */
+        $query_select = $client->query(
+            'SELECT * FROM parent WHERE id = ?'
+        );
         $args_select = [
             'id' => $insert_id,
         ];
@@ -74,7 +73,6 @@ class PopulateTest extends TestCase
         $result_select = $query_select->execute();
         static::assertInstanceOf(MsSqlResult::class, $result_select);
         $row_select = $result_select->fetchArray();
-        TestHelper::logVariable('row select', $row_select);
         static::assertIsArray($row_select);
         $result_select->free();
 
@@ -99,9 +97,7 @@ class PopulateTest extends TestCase
         $args = [];
         $result_select = $query_select->execute();
         $num_rows = $result_select->numRows();
-        TestHelper::logVariable('num_rows', $num_rows);
         $all_rows = $result_select->fetchArrayAll();
-        TestHelper::logVariable('count rows', count($all_rows));
     }
 
 }
