@@ -1,3 +1,9 @@
+SimpleComplex/Database 3.x, 2020-07-14
+--------------------------------------
+- MariaDb simple query parameters support null.
+- MariaDb simple query parameters shan't validate parameters on preparation
+  unless validateParams options says so.
+
 SimpleComplex/Database 3.x, 2020-07-13
 --------------------------------------
 - DbQuery::setValidateParams() to alter validateParams option upon
